small update payslip email & excel

--- a/qlns/templates/email_payslip.html
+++ b/qlns/templates/email_payslip.html
@@ -16,8 +16,8 @@
         <div class="row" style="box-sizing: border-box;--bs-gutter-x: 1.5rem;--bs-gutter-y: 0;display: flex;flex-wrap: wrap;margin-top: calc(var(--bs-gutter-y) * -1);margin-right: calc(var(--bs-gutter-x)/ -2);margin-left: calc(var(--bs-gutter-x)/ -2);">
             <div class="col" style="box-sizing: border-box;flex-shrink: 0;width: 100%;max-width: 100%;padding-right: calc(var(--bs-gutter-x)/ 2);padding-left: calc(var(--bs-gutter-x)/ 2);margin-top: var(--bs-gutter-y);flex: 1 0 0%;">
                 <p class="fs-4" style="box-sizing: border-box;margin-top: 0;margin-bottom: 1rem;font-size: 1.5rem!important;">Thông báo</p>
-                <p style="box-sizing: border-box;margin-top: 0;margin-bottom: 1rem;">Đây là phiếu lương được gửi tự động từ HRM System. Vui lòng kiểm tra lại thông tin và liên hệ quản
-                    trị viên nếu xảy ra vấn đề</p>
+                <p style="box-sizing: border-box;margin-top: 0;margin-bottom: 1rem;">Đây là phiếu lương được gửi tự động từ HRM System cho chu kỳ lương {{cycle_start_date}} -
+                    {{cycle_end_date}}</p>
             </div>
         </div>
         <div class="row" style="box-sizing: border-box;--bs-gutter-x: 1.5rem;--bs-gutter-y: 0;display: flex;flex-wrap: wrap;margin-top: calc(var(--bs-gutter-y) * -1);margin-right: calc(var(--bs-gutter-x)/ -2);margin-left: calc(var(--bs-gutter-x)/ -2);">
@@ -39,12 +39,14 @@
                 </table>
             </div>
         </div>
-        <!-- <div class="row">
-            <div class=" col d-flex justify-content-end">
-                <span>Website: </span>
-                <a href="http://localhost:8001/">HRM Web</a>
+        <div style="box-sizing: border-box;">
+            <p style="box-sizing: border-box;margin-top: 0;margin-bottom: 1rem;">Vui lòng kiểm tra lại thông tin. Mọi thắc mắc xin viu lòng liên hệ quản trị viên để được giải đáp.
+            </p>
+            <div style="box-sizing: border-box;">
+                <span style="box-sizing: border-box;">Website: </span>
+                <a href="#" style="box-sizing: border-box;color: #0d6efd;text-decoration: underline;">HRM Web</a>
             </div>
-        </div> -->
+        </div>
     </div>
 </body>
 
