--- a/qlns/templates/email_payslip_normal.html
+++ b/qlns/templates/email_payslip_normal.html
@@ -18,8 +18,8 @@
         <div class="row">
             <div class="col">
                 <p class="fs-4">Thông báo</p>
-                <p>Đây là phiếu lương được gửi tự động từ HRM System. Vui lòng kiểm tra lại thông tin và liên hệ quản
-                    trị viên nếu xảy ra vấn đề</p>
+                <p>Đây là phiếu lương được gửi tự động từ HRM System cho chu kỳ lương {{cycle_start_date}} -
+                    {{cycle_end_date}}</p>
             </div>
         </div>
         <div class="row">
@@ -43,12 +43,14 @@
                 </table>
             </div>
         </div>
-        <!-- <div class="row">
-            <div class=" col d-flex justify-content-end">
+        <div>
+            <p>Vui lòng kiểm tra lại thông tin. Mọi thắc mắc xin viu lòng liên hệ quản trị viên để được giải đáp.
+            </p>
+            <div>
                 <span>Website: </span>
-                <a href="http://localhost:8001/">HRM Web</a>
+                <a href="#">HRM Web</a>
             </div>
-        </div> -->
+        </div>
     </div>
 </body>
 
