fix style email payslip

--- a/qlns/templates/email_payslip.html
+++ b/qlns/templates/email_payslip.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="bg-light p-3" style="box-sizing: border-box;margin: 0;font-family: var(--bs-font-sans-serif);font-size: 1rem;font-weight: 400;line-height: 1.5;color: #212529;background-color: #f8f9fa!important;-webkit-text-size-adjust: 100%;-webkit-tap-highlight-color: transparent;padding: 1rem!important;">
-    <div class="container shadow p-3 mb-5 bg-body rounded" style="width: 60%;box-sizing: border-box;padding-right: var(--bs-gutter-x,.75rem);padding-left: var(--bs-gutter-x,.75rem);margin-right: auto;margin-left: auto;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;margin-bottom: 3rem!important;padding: 1rem!important;background-color: #fff!important;border-radius: .25rem!important;">
+    <div class="container shadow p-3 mb-5 bg-body rounded" style="width: max-content; max-width: 30rem; box-sizing: border-box;padding-right: var(--bs-gutter-x,.75rem);padding-left: var(--bs-gutter-x,.75rem);margin-right: auto;margin-left: auto;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;margin-bottom: 3rem!important;padding: 1rem!important;background-color: #fff!important;border-radius: .25rem!important;">
         <div class="row" style="box-sizing: border-box;--bs-gutter-x: 1.5rem;--bs-gutter-y: 0;display: flex;flex-wrap: wrap;margin-top: calc(var(--bs-gutter-y) * -1);margin-right: calc(var(--bs-gutter-x)/ -2);margin-left: calc(var(--bs-gutter-x)/ -2);">
             <div class="col" style="box-sizing: border-box;flex-shrink: 0;width: 100%;max-width: 100%;padding-right: calc(var(--bs-gutter-x)/ 2);padding-left: calc(var(--bs-gutter-x)/ 2);margin-top: var(--bs-gutter-y);flex: 1 0 0%;">
                 <p class="fs-4" style="box-sizing: border-box;margin-top: 0;margin-bottom: 1rem;font-size: 1.5rem!important;">Thông báo</p>
