--- a/qlns/templates/email_payslip_normal.html
+++ b/qlns/templates/email_payslip_normal.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="bg-light p-3">
-    <div class="container shadow p-3 mb-5 bg-body rounded" style="width: 60%;">
+    <div class="container shadow p-3 mb-5 bg-body rounded" style="width: max-content; max-width: 30rem;">
         <div class="row">
             <div class="col">
                 <p class="fs-4">Thông báo</p>
